--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ doc8 = "*"
 rst2pdf = "~=0.94.0"
 matplotlib = "~=2.2.0"
 acs-examine-student-assignment = "~=1.0"
+acs-extract-student-assignments = "~=1.0.1"
 
 [requires]
 python_version = "2.7"
