acs_assignment_result_template

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ rst2pdf = "~=0.94.0"
 matplotlib = "~=2.2.0"
 acs-examine-student-assignment = "~=1.0"
 acs-extract-student-assignments = "~=1.0.1"
+acs-assignment-result-template = "*"
 
 [requires]
 python_version = "2.7"
